--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@zechtz/fetcher",
   "version": "1.0.0",
   "description": "A React component for fetching data with render props",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/Fetcher.js",
+  "types": "dist/Fetcher.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zechtz/fetcher.git"
